--- a/src/styling/Home.css
+++ b/src/styling/Home.css
@@ -1,8 +1,8 @@
 .container {
   padding: 0;
   display: grid;
-  grid-template-columns: 1fr;
-  margin: 0 auto;
+  grid-template-columns: repeat(2, 1fr);
+  margin: 0;
   background-color: #ec4c8b;
 }
 
